fix overflow for addQurstion

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -689,3 +689,7 @@
         margin-top: 96px;
     }
 }
+
+.addQuestion {
+    overflow: visible !important;
+}
